[package]
name = "sds011-exporter"
version = "0.1.0"
authors = ["Tim Buckley <timothyb89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["macros"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures = "0.3"
anyhow = "1.0"
err-derive = "0.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
tokio-serial = "4.3"
bytes = "0.5"

simple-prometheus-exporter = { git = "https://github.com/timothyb89/simple-prometheus-exporter-rs", tag = "v0.1.0" }
